<resources>
    <string name="app_name">Cinema app</string>
    <string name="Title_film_list">Список фильмов</string>
    <string name="Nachalo">Начало</string>
    <string name="mr_nobody">Господин никто</string>
    <string name="final_cosmos">Крайний космос</string>
    <string name="interstellar">Интерстеллар</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutFimalCosmos">Гэри Гудспид в результате спровоцированной им катастрофы на Земле отбывает 5-летний тюремный срок на космическом корабле в космосе. Незадолго до истечения срока Гэри сталкивается с таинственным инопланетянином, которого назвал Пряник. Гэри еще не подозревает, что Пряник способен уничтожить Вселенную.</string>
    <string name="aboutNachcalo">Кобб – талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим. Редкие способности Кобба сделали его ценным игроком в привычном к предательству мире промышленного шпионажа, но они же превратили его в извечного беглеца и лишили всего, что он когда-либо любил.  И вот у Кобба появляется шанс исправить ошибки. Его последнее дело может вернуть все назад, но для этого ему нужно совершить невозможное – инициацию. Вместо идеальной кражи Кобб и его команда спецов должны будут провернуть обратное. Теперь их задача – не украсть идею, а внедрить ее. Если у них получится, это и станет идеальным преступлением.  Но никакое планирование или мастерство не могут подготовить команду к встрече с опасным противником, который, кажется, предугадывает каждый их ход. Врагом, увидеть которого мог бы лишь Кобб.</string>
</resources>